objects/alm_pm2__Logged_Exception__c.object
<CustomObject>
 <fullName>alm_pm2__Logged_Exception__c</fullName>
 <fields>
  <fullName>alm_pm2__Application__c</fullName>
  <description>The application that the exception occurred in</description>
  <label>Application</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Admin Console</fullName>
    </value>
    <value>
     <fullName>Backlog Management</fullName>
    </value>
    <value>
     <fullName>Component Documentation</fullName>
    </value>
    <value>
     <fullName>Sprint</fullName>
    </value>
    <value>
     <fullName>Slingshot</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__Class_Id__c</fullName>
  <label>Class Id</label>
  <length>25</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Class_Link__c</fullName>
  <formula>HYPERLINK('/' +  alm_pm2__Class_Id__c , 'View Class', '_BLANK')</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Class Link</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Class_Name__c</fullName>
  <label>Class Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Exception_Description__c</fullName>
  <description>Includes Stack Trace, DML operation info, etc</description>
  <label>Exception Description</label>
  <length>16384</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Line_Number__c</fullName>
  <label>Line Number</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Log_Level__c</fullName>
  <label>Log Level</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Warning</fullName>
    </value>
    <value>
     <fullName>Error</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__Notified__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Notified</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Organization_Id__c</fullName>
  <label>Organization Id</label>
  <length>25</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Organization_Name__c</fullName>
  <label>Organization Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Type__c</fullName>
  <description>Describes the type of Exception that has been logged. These values are drawn from the Exception type list that can be found in Salesforce's Apex documentation.</description>
  <label>Type</label>
  <length>30</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Who__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Who</label>
  <referenceTo>User</referenceTo>
  <relationshipName>Logged_Exeptions1</relationshipName>
  <type>Lookup</type>
 </fields>
 <label>Logged Exception</label>
 <nameField>
  <displayFormat>Ex{0000}</displayFormat>
  <label>Logged Exception Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Logged Exeptions</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>